# clinical-rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
config/: config.yaml
docs/: architecture.md
docs/specs/: 2026-06-25-clinical-rag-design.md
models/: rag_index.pkl
reports/: retrieval_eval.json
src/clinical_rag/: __init__.py  config.py  corpus.py  evaluate.py  generate.py  ner.py  pii.py  rag.py  retriever.py
src/clinical_rag/api/: main.py  schemas.py
tests/: test_api.py  test_corpus.py  test_evaluate.py  test_ner.py  test_pii.py  test_rag.py  test_retriever.py  test_smoke.py
