[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical_rag"
version = "0.1.0"
description = "Clinical RAG assistant: retrieval over medical references, dictionary NER, PII guardrails, and grounded answers with a configurable (extractive / Claude / OpenAI) generation backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bushra Nazeer", email = "bushnaze@gmail.com" }]
keywords = ["rag", "retrieval-augmented-generation", "nlp", "healthcare", "llm", "vector-search"]

dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "joblib>=1.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
# Optional, lazily-imported upgrades (not needed to run the default pipeline):
transformers = ["sentence-transformers>=2.7"]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]

[project.urls]
Homepage = "https://github.com/bushra-nazeer/clinical-rag-assistant"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
